# ice-lang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Token.h  ast.h  ast_printer.h  expr.h  ice_lang.cpp  ice_lang.h  main.cpp  parser.cpp  parser.h  stmt.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
ideas/: idea_0.md
src/: CMakeLists.txt  ast.h  ast_printer.h  ice_lang.cpp  ice_lang.h  main.cpp  parser.cpp  parser.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
src/misc/: assert.h  option.h  result.h
test/: test.ice
